@@ -2,15 +2,15 @@ DROP PROCEDURE IF EXISTS patch_operation;
 DELIMITER //
 CREATE PROCEDURE patch_operation()
   BEGIN
-    -- determine the @cenozo database name
-    SET @cenozo = CONCAT( SUBSTRING( DATABASE(), 1, LOCATE( 'sabretooth', DATABASE() ) - 1 ),
-                          'cenozo' );
-
-    -- add new participant withdraw widget
+    -- add new operations
     SELECT "Adding new operations" AS "";
 
     INSERT IGNORE INTO operation( type, subject, name, restricted, description )
     VALUES( "widget", "participant", "withdraw", true, "Pseudo-assignment to handle participant withdraws." );
+    INSERT IGNORE INTO operation( type, subject, name, restricted, description )
+    VALUES( "pull", "consent_required", "report", true, "Download a consent required report." );
+    INSERT IGNORE INTO operation( type, subject, name, restricted, description )
+    VALUES( "widget", "consent_required", "report", true, "Set up a consent required report." );
   END //
 DELIMITER ;
 
