@@ -199,6 +199,16 @@ CREATE PROCEDURE patch_role_has_operation()
     EXECUTE statement;
     DEALLOCATE PREPARE statement;
 
+    SET @sql = CONCAT(
+      "INSERT IGNORE INTO role_has_operation( role_id, operation_id ) "
+      "SELECT role.id, operation.id FROM ", @cenozo, ".role, operation "
+      "WHERE subject = 'consent_required' "
+      "AND operation.restricted = true ",
+      "AND role.name IN( 'administrator', 'supervisor', 'curator' )" );
+    PREPARE statement FROM @sql;
+    EXECUTE statement;
+    DEALLOCATE PREPARE statement;
+
   END //
 DELIMITER ;
 
