@@ -1,0 +1,7 @@
+{##
+ # consent_required_report.twig
+ # 
+ # Consent required report.
+ # @author Patrick Emond <emondpd@mcmaster.ca>
+ #}
+{% extends "base_report.twig" %}
